[fix] homepage overflow

--- a/client/src/routes/Home/Home.css
+++ b/client/src/routes/Home/Home.css
@@ -4,6 +4,7 @@
     align-items: center;
     justify-content: center;
     padding: 20px;
+    overflow-x: hidden;
 }
 
 .home-page-hero-section {
